--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <!-- hamburger-css -->
+    <link rel="stylesheet" href="css/hamburgers.min.css" />
+    <!-- custom-css -->
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Devchallenges | Interior Consultant</title>
   </head>
